# roverlib-c

./: .gitignore  Bmakefile  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  boot.json
.devcontainer/: Dockerfile  devcontainer.json
dependencies/c-hashtable/: CMakeLists.txt
dependencies/c-list/: CMakeLists.txt
docs/: 01-installation.md  01-overview.md  02-development.md  02-usage.md  03-development.md
include/rovercom/control/: control.pb-c.c  control.pb-c.h
include/rovercom/debug/: debug.pb-c.c  debug.pb-c.h
include/rovercom/infrastructure/: finish-line.pb-c.c  finish-line.pb-c.h
include/rovercom/outputs/: battery.pb-c.c  battery.pb-c.h  camera.pb-c.c  camera.pb-c.h  controller.pb-c.c  distance.pb-c.c  energy.pb-c.h  generic.pb-c.h  imu.pb-c.c  laptime.pb-c.c  lidar.pb-c.h  lux.pb-c.c  rpm.pb-c.c  rpm.pb-c.h  speed.pb-c.c  wrapper.pb-c.c  wrapper.pb-c.h
include/rovercom/segmentation/: segmentation.pb-c.c  segmentation.pb-c.h
include/rovercom/simulator/: simulator.pb-c.c  simulator.pb-c.h
include/rovercom/tuning/: tuning.pb-c.c  tuning.pb-c.h
include/roverlib/: bootinfo.h  configuration.h  run.h  validate.h
src/: bootinfo.c  bootinfo.h  callbacks.h  configuration.c  configuration.h  main.c  run.c  run.h  streams.c  streams.h  validate.c
src/rovercom/outputs/: camera.pb-c.c  energy.pb-c.c  generic.pb-c.c  lidar.pb-c.c  rpm.pb-c.c  wrapper.pb-c.c
test/: Makefile  boot.json  main  main.c
tests/: bootinfo_test.c  configuration_test.c  streams_test.c
